# Youtube_Clickbait_Detection

./: .gitignore  README.md  app.py  pyproject.toml
scripts/: build_exe.bat
youtube_clickbait/: __init__.py  analysis_queue.py  analyzer.py  ollama_client.py  ollama_launcher.py  pipeline.py  tk_app.py  youtube_utils.py
