[project]
name = "youtube-clickbait-detection"
version = "0.1.0"
description = "Local LLM app to summarize YouTube videos and detect clickbait vs. title"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "yt-dlp>=2024.10.7",
    "youtube-transcript-api>=0.6.2",
]

[project.scripts]
youtube-clickbait = "youtube_clickbait.tk_app:main"

[dependency-groups]
dev = ["pyinstaller>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["youtube_clickbait"]
